--- a/exeapp/static/css/styles/common.scss
+++ b/exeapp/static/css/styles/common.scss
@@ -27,6 +27,8 @@ body {
 
 
 nav {
+  overflow-y: auto;
+  max-height: calc(100% - 135px);
   ul {
     padding-left: 0;
   }
